wal-rsx/tests/elements/element_with_wrong_way_of_closing_fail.rs
use wal_rsx::rsx;

fn main() {
    rsx! { <area></area> };
    rsx! { <base></base> };
    rsx! { <br></br> };
    rsx! { <col></col> };
    rsx! { <embed></embed> };
    rsx! { <hr></hr> };
    rsx! { <img></img> };
    rsx! { <input></input> };
    rsx! { <link></link> };
    rsx! { <meta></meta> };
    rsx! { <param></param> };
    rsx! { <source></source> };
    rsx! { <track></track> };
    rsx! { <wbr></wbr> };
}
